finalização das tarefas associadas aos operadores

--- a/Calculadora/Calculadora/Views/Home/Index.cshtml
+++ b/Calculadora/Calculadora/Views/Home/Index.cshtml
@@ -8,7 +8,12 @@
 </div>
 
 <form method = "post">
-
+    <!-- linha de comentario, em HTML : vai aparecer no browser -->
+    @* esta linha de comentario é do RAZOR : não é visivel no browser *@
+    <input type = "hidden" name = "primeiroOperando" value = "@ViewBag.PrimeiroOperando" />
+    <input type = "hidden" name = "operador" value = "@ViewBag.Operador" />
+    <input type = "hidden" name = "limpaEcra" value = "@ViewBag.LimpaEcra" />
+    
 
   <table border="0"
           style="border-spacing:3px;
